--- a/Style/Homepage.css
+++ b/Style/Homepage.css
@@ -459,3 +459,60 @@
     color: #e13c1b;
 
 }
+/*banner 13 style*/
+.banner13-text1{
+    text-align: center;
+    font-size: 35px;
+    margin: 15px;
+    color: rgba(94, 6, 7, 0.822);
+}
+.banner13-from{
+   display: flex;
+   width: 90%;
+   justify-content: space-around;
+   align-items: center;
+   margin: auto;
+   margin-top: 15px;
+   
+}
+.banner13-text2{
+  margin:4px;
+  font-size: 25px;
+  font-weight: bold;
+  color: black;
+}
+.banner13-int{
+    margin: 2px;
+    width: 400px;
+    height: 35px;
+
+}
+.banner13-container14{
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+.banner13-text3{
+    font-size: 20px;
+    color: #e13812;
+}
+.banner13-btn{
+    height: 40px;
+    width: 190px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    background-color: rgba(42, 165, 112, 0.5);
+    border-radius: 5px;
+    margin-left: 70px;
+
+}
+.banner13-btn:hover{
+    color: rgb(226, 63, 63);
+    background-color: bisque;
+}
+.banner13-img{
+    border-radius: 10px;
+    height: 430px;
+}
